--- a/style.css
+++ b/style.css
@@ -7,22 +7,37 @@
     background: rgb(137, 255, 182);
 }
 /*inicio do css do login*/
+h1{
+    margin-left: 9%;
+}
 .container{
-    align-items: center;
-    position: relative;
     margin-left: 42%;
-    padding: 0;
-    margin-top: 19%;
+    margin-top: 15%;
     font-size: 15px;
 }
+.cont{
+    backdrop-filter: blur(20);
+    border-right: 2px;
+}
 #bnt{
-    margin-left: 10%;
+    margin-left: 9%;
+    border: 1px solid black;
+    padding-left: 2%;
+    padding-right: 2%;
+    border-radius: 10px;
+    color: black;
+    transition: 0.1s;
+}
+#bnt:hover{
+    font-size: 115%;
+    transition: 0.1s;
+    right: -2px;
+    background: rgb(56, 201, 145);
+    border-color: rgb(56, 201, 145);
 }
 input{
     font-size: 20px;
     border-radius: 10px;
     padding: 5px;
     padding-left: 5%;
-}
-#form{
 }
