--- a/style.css
+++ b/style.css
@@ -4,32 +4,70 @@
     font-family: 'Oswald', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     background: rgb(137, 255, 182);
+}
+
+body::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#c0fa21, rgb(27, 126, 219));
+    clip-path: circle(22% at 30% 40%);
+}
+
+body::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#c114d8, rgb(22, 111, 184));
+    clip-path: circle(22% at 70% 80%);
 }
 /*inicio do css do login*/
 h1{
     margin-left: 9%;
 }
 .container{
-    margin-left: 42%;
-    margin-top: 15%;
+    position: absolute;
+    margin-left: 1%;
+    margin-top: 3%;
     font-size: 15px;
+    background: transparent;
+    padding: 5%;
+    border: 1px solid black;
+    border-width: thin;
+    z-index: 10;
+    backdrop-filter: blur(15px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
 }
 .cont{
     backdrop-filter: blur(20);
     border-right: 2px;
 }
 #bnt{
-    margin-left: 9%;
+    margin-left: 25%;
     border: 1px solid black;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 15%;
+    padding-right: 15%;
     border-radius: 10px;
     color: black;
     transition: 0.1s;
 }
 #bnt:hover{
-    font-size: 115%;
+    font-size: 110%;
     transition: 0.1s;
     right: -2px;
     background: rgb(56, 201, 145);
@@ -40,4 +78,6 @@ input{
     border-radius: 10px;
     padding: 5px;
     padding-left: 5%;
+    background: transparent;
+    color: black;
 }
