--- a/style.css
+++ b/style.css
@@ -81,3 +81,9 @@ input{
     background: transparent;
     color: black;
 }
+footer{
+    background: rgb(56, 201, 145);
+}
+span {
+    content: '\\00A9';
+ }
